tests/snapshots/run_wpt_conformance__coreml_argMax_float16_4D_tensor__axis_3__options_keepDimensions_true.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "arg_min_max.https.any.js",
    "argMax float16 4D tensor, axis=3, options.keepDimensions=true",
    "coreml",
    "PASS",
)
